did a reset and styling

--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <title></title>
   </head>
   <body>
-    <h1>Wanna buy one of these?</h1>
+    <h1>Wanna buy one of these? #BusMall</h1>
+    <p>Click the image that calls to you! Find your shopping destiny!</p>
     <div id="display">
 
     </div>
+    <ul id="list">
+
+    </ul>
     <script src="app.js"></script>
   </body>
 </html>
