added chart functionality

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <div id="display">
 
     </div>
+    <canvas id="chart" width="400" height="200"></canvas>
     <ul id="list">
 
     </ul>
+    <script src="chart.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
