--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <ul id="list">
 
     </ul>
-    <script src="chart.js"></script>
-    <script src="app.js"></script>
+    <script src="js/chart.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
